tests/fixtures/invalid/pow_str_dict_int.py
# Cannot call pow() with Str, Dict[str, int], Int
x = pow("hello", {"a": 1}, 1)
